--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase": "^9.16.0",
     "jotai": "^1.13.1",
     "moment": "^2.29.4",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -51,6 +52,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.1.3",
     "react-native-ratings": "^8.1.0",
@@ -58,6 +60,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "shorthash": "^0.0.2"
